styles/default.css
/* ... */
/** Unternehmen -> Team
 * 	
 */
div.team-item {
	float: left;
	width: 370px;
	margin: 0 0 20px 0;
	box-sizing: border-box;
	 -moz-box-sizing: border-box;
	text-align: left;
}

div.team-item img {
	width: 300px;
	margin: 0 auto !important;
}

div.button-red {
	padding: 8px 10px 2px 10px;
	margin: 0;
	height: 31px;
	width: 202px;
	background-image: url(../images/news_button.png);
	text-align: center;
	position: relative;
	top: -20px;
	left: 100px;
	color: #fff;
	font-size: 1.1em;
}

div.button-team a {
	text-decoration: none;
	color: #fff;
}

/** Unsere Autos -> Formular
 * 	
 */

input#mailformsubmit {
	padding: 0;
	margin: 0;
	border: 0;
	height: 41px;
	width: 222px !important;
	box-sizing: border-box;
	 -moz-box-sizing: border-box;
	background: rgba(1,1,1,0.0) url(../images/news_button.png);
	text-align: center;
	color: #fff;
	font-size: 1.1em;
}

input {
	margin: 5px 0 !important;
}

table.fahrzeuge {
	width: 326px;
	margin: 0 auto;
	text-align: center;
	font-size: 1.2em;
}

span.label {
	font-weight: bold;
	margin-right: 4px;
	position: relative;
	text-align: right !important;
	left: 20px;
}

table.fahrzeuge input[type=text] {
	position: relative;
	top: 0px;
	width: 175px;
	height: 26px;
	border: 1px solid #e3000b;
	border-radius: 2px;
	box-shadow: 3px 3px 1px #ccc;
}

table.fahrzeuge select {
	width: 180px;
	height: 30px;
	border: 1px solid #e3000b;
	border-radius: 2px;
	box-shadow: 3px 3px 1px #ccc;
}

table.fahrzeuge tr {
	height: 50px;
	vertical-align: middle;
}

.label-modell {
	top: 0px !important;
}

iframe {
	width: 640px;
	margin: 0 0 0 46px !important; 
	background-color: #fff;
}

a.anchor {
	height: 0px; width: 0px; visibility: hidden;
	margin: 0; padding: 0;
}

/** Search Box
 * 	*/

.always {
	opacity: 1 !important;
}


div#sbword {
	
	padding: 10px 0 0 0;
}

input.searchbox-sword {

	border-left: 1px solid #E3000B;
	border-top: 1px solid #E3000B;
	border-bottom: 1px solid #E3000B;
	border-right: 10px solid #E3000B !important;
	background-color: #e3000b;
	color: #fff;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	/*border: 0px solid #000;*/
	height: 26px;
	
	padding: 2px;
	font-family: 'Oswald Light', Arial, sans-serif; 
	border-radius: 1px;
	font-size: 0.95em;
	letter-spacing: 0.1em;
	width: 180px;
	cursor: default;

	/*-webkit-box-shadow: 4px 4px 0px 0px rgba(0,0,0,0.33);
	-moz-box-shadow: 4px 4px 0px 0px rgba(0,0,0,0.33);
	box-shadow: 4px 4px 0px 0px rgba(0,0,0,0.33);*/
}

.focus {
	cursor: auto !important;
}


#eingabeform label {
	
	width: 100px;
}

a#logo {
	float: left;
	display: inline-block;
	width: 160px;
	height: 35px;
}

.news-item a {
	/*display: block;
	position: relative;*/
}




.no-wrap {
	white-space: nowrap;
}


.csc-mailform {
	font-size: 15.45px !important;
}	

.imagegalery {
	margin-bottom:30px;	
}
.imagegalery a {
	width:196px;
	height:196px;
	border:2px solid #FFFFFF;
	overflow:hidden;
	margin-right:10px;
	margin-left:10px;
	margin-bottom:20px;
	-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
	transition:all ease-in-out 0.15s;
	-moz-transition:all ease-in-out 0.15s;
	-webkit-transition:all ease-in-out 0.15s;
	display:inline-block;
	
}
.imagegalery a:hover { 
	-webkit-box-shadow: 0px 0px 5px 0px rgba(227,0,11,1);
-moz-box-shadow: 0px 0px 5px 0px rgba(227,0,11,1);
box-shadow: 0px 0px 5px 0px rgba(227,0,11,1);
}
.imagegalery a img {
	height:100% !important;
	width:auto !important;	
}
.imagegalery .csc-textpic-imagewrap {
	width:auto !important;	
}
.imagegalery div.csc-textpic-center .csc-textpic-imagewrap, div.csc-textpic-center figure.csc-textpic-imagewrap,
.imagegalery div.csc-textpic, div.csc-textpic div.csc-textpic-imagerow, ul.csc-uploads li{
	overflow:visible;	
}
.fullwidthimage .csc-textpic-imagewrap {
	width:100% !important;
	margin-bottom:10px;	
}
.fullwidthimage img {
	width:100% !important;
	height:auto !important;	
}
#c9 > .contentwrapper {
	position:relative;	
}
#iframeloader {
	text-align:center;	
	background:rgba(255,255,255,0.7);
	width:640px;
	height:800px;
	position:absolute;
	z-index:200000;
	bottom:0;
	margin-left:46px;
}
#iframeloader img {
	margin-top:350px;	
}

.fullwidthimage .csc-textpic-image img {
	width:100% !important;
	height:auto	!important;
}
b, strong {
	font-family:"Oswald", Arial, sans-serif;
}
.contenttable, ul {
	font-size:1.0725em;	
}
.contenttable thead th, .contenttable tfoot td{	
	font-family:"Oswald", Arial, sans-serif;
	background:#e3000b;
	color:#FFF;
	padding:5px 10px;
}
.contenttable-0 td {
	width:25%;	
	padding:5px 10px;
}
.contenttable tbody tr.tr-even td {
	background:#CCC;	
}

